# prism

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  app.yaml  docker-compose.yml  prism_settings.json  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  sync-public.yml
.kiro/specs/prism/: .config.kiro  design.md  requirements.md  tasks.md
backend/: config.py  exceptions.py  logging_config.py  main.py  models.py  settings_store.py
backend/api/: models.py  routes.py
backend/discovery/: __init__.py  cache_manager.py  catalog_parser.py  gitlab_fetcher.py  graph_parser.py  index_builder.py  manifest_parser.py
backend/execution/: databricks_runner.py
backend/generation/: chart_advisor.py  prompt_builder.py  sql_generator.py
backend/search/: embedder.py  retriever.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AssistantMessage.tsx  ChartView.tsx  ConfidenceIndicator.tsx  (+7 more)
private/: README.md
tests/: conftest.py
tests/integration/: test_full_query_flow.py
tests/smoke/: test_performance.py  test_startup.py
tests/unit/: test_artifact_url_construction.py  test_cache_status.py  test_column_preservation.py  test_config.py  test_graph_parser.py  test_index_builder.py  test_layer_inference.py  test_log_completeness.py  test_prompt_builder.py  test_query_runner.py  test_retrieval_ranking.py  test_schema_models.py  test_sql_generator.py  test_text_representation.py  test_token_masking.py  test_zero_value_fallback.py
(+9 files in other folders)
